--- a/Mandatory_I/public/pages/adminpage/adminpage.html
+++ b/Mandatory_I/public/pages/adminpage/adminpage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Page</title>
+  <title>$TAB_TITLE</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="/assets/css/page.css" rel="stylesheet">
@@ -17,7 +17,7 @@
       Welcome to the administrative hub of this platform. Here, you'd typically find tools and functionalities to manage users, monitor activities, and maintain the system. However, this is just a mock admin page and there's not much to do here. Thank you for stopping by!
     </div>
   </div>
-  <script src="/assets/js/navbar.js"></script>
+  <script src="/components/navbar/navbar.js"></script>
 </body>
 
 </html>
