--- a/Mandatory_I/public/pages/contactpage/contactpage.html
+++ b/Mandatory_I/public/pages/contactpage/contactpage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>$TAB_TITLE</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="/assets/css/page.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <script src="/assets/js/navbar.js"></script>
+  <script src="/components/navbar/navbar.js"></script>
 </body>
 
 </html>
