--- a/Mandatory_I/public/pages/node.jspage/node.jspage.html
+++ b/Mandatory_I/public/pages/node.jspage/node.jspage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express.js</title>
+    <title>$TAB_TITLE</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -209,6 +209,6 @@ To github.com:user/project.git
         </div>
         <div id="content-spacer"></div>
     </div>
-    <script src="/assets/js/navbar.js"></script>
-    <script src="/assets/js/scrollspy.js"></script>
+    <script src="/components/navbar/navbar.js"></script>
+    <script src="/components/scrollspy/scrollspy.js"></script>
 </body>
