--- a/Mandatory_I/public/pages/gitpage/gitpage.html
+++ b/Mandatory_I/public/pages/gitpage/gitpage.html
@@ -20,6 +20,13 @@
 
     <div class="window toc-section">
         <div class="window-main-title" id="main-title-1">Working with Git in the terminal</div>
+        <div class="window-main-description">Git is a version control system that allows you to keep track of your
+            changes
+            and work with other developers on the same project. It is a very useful tool that you will need to learn
+            how to
+            use. In this section we will go through the basics of Git and how to use it in the terminal.
+
+        </div>
         <div class="content toc-subsection">
             <div class="window-sub-title" id="sub-title-1-1">Setup Git in your project</div>
             <div class="window-description">First you have to install the .git file in your project directory. This can
@@ -71,7 +78,7 @@
             </pre>
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-1-2">Other useful Git commands</div>
+            <div class="window-sub-title" id="sub-title-1-3">Other useful Git commands</div>
             <div class="window-description">These are some other useful Git commands that you might need.
             </div>
             <pre class="terminal-snippet">
@@ -100,7 +107,7 @@
    
             </pre>
         </div>
-
+        <div id="content-spacer"></div>
     </div>
     <script src="/components/navbar/navbar.js"></script>
     <script src="/components/scrollspy/scrollspy.js"></script>
