--- a/Mandatory_I/public/pages/node.jspage/node.jspage.html
+++ b/Mandatory_I/public/pages/node.jspage/node.jspage.html
@@ -143,7 +143,41 @@
             </pre>
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-4-1">Install dependencies</div>
+            <div class="window-sub-title" id="sub-title-4-1">package.json File</div>
+            <div class="window-description">You will now have a package.json file in your project directory that will
+                contain information about your project and its dependencies.
+                <br><br>Here is an example of a package.json file:
+            </div>
+            <pre class="code-snippet">
+
+
+    { 
+        "name": "Project",
+        "version": "0.0.1",
+        "description": "Project",
+        "type": "module",
+        "main": "app.js",
+        "scripts": {
+            "test": "echo \"Error: no test specified\" && exit 1",
+        },
+        "repository": {
+            "type": "git",
+            "url": //Your url could look something like this: "git+https://github.com/JWillumsen89/Node.js_2023_Summer.git"
+        },
+        "author": "Author Name",
+        "license": "Desired License",
+        "bugs": {
+            "url": //Your url could look something like this: "https://github.com/User/Node.js/issues"
+        },
+        "homepage": //Your url could look something like this: "https://github.com/User/Node.js#readme",
+        "dependencies": {
+        }
+    }
+                  
+            </pre>
+        </div>
+        <div class="content toc-subsection">
+            <div class="window-sub-title" id="sub-title-5-1">Install dependencies</div>
             <div class="window-description">You will now need to install the needed dependencies for your project.
                 This can be done in multiple ways. Here I will show some examples of how to install the Express.js
                 dependency.
@@ -207,7 +241,7 @@
             </div>
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-5-1">Create app.js and run files with node.js</div>
+            <div class="window-sub-title" id="sub-title-6-1">Create app.js and run files with node.js</div>
             <div class="window-description">I this example I will show how to create the app.js file and run it with
                 node.js.
                 <br><br>First create the app.js file in your project directory and add the following code to the file.
