--- a/Mandatory_I/public/pages/node.jspage/node.jspage.html
+++ b/Mandatory_I/public/pages/node.jspage/node.jspage.html
@@ -109,7 +109,7 @@
             </pre>
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-3-1">package.json File</div>
+            <div class="window-sub-title" id="sub-title-1-3">package.json File</div>
             <div class="window-description">You will now have a package.json file in your project directory that will
                 contain information about your project and its dependencies.
                 <br><br>Here is an example of a package.json file:
@@ -143,41 +143,7 @@
             </pre>
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-4-1">package.json File</div>
-            <div class="window-description">You will now have a package.json file in your project directory that will
-                contain information about your project and its dependencies.
-                <br><br>Here is an example of a package.json file:
-            </div>
-            <pre class="code-snippet">
-
-
-    { 
-        "name": "Project",
-        "version": "0.0.1",
-        "description": "Project",
-        "type": "module",
-        "main": "app.js",
-        "scripts": {
-            "test": "echo \"Error: no test specified\" && exit 1",
-        },
-        "repository": {
-            "type": "git",
-            "url": //Your url could look something like this: "git+https://github.com/JWillumsen89/Node.js_2023_Summer.git"
-        },
-        "author": "Author Name",
-        "license": "Desired License",
-        "bugs": {
-            "url": //Your url could look something like this: "https://github.com/User/Node.js/issues"
-        },
-        "homepage": //Your url could look something like this: "https://github.com/User/Node.js#readme",
-        "dependencies": {
-        }
-    }
-                  
-            </pre>
-        </div>
-        <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-5-1">Install dependencies</div>
+            <div class="window-sub-title" id="sub-title-1-4">Install dependencies</div>
             <div class="window-description">You will now need to install the needed dependencies for your project.
                 This can be done in multiple ways. Here I will show some examples of how to install the Express.js
                 dependency.
@@ -241,7 +207,7 @@
             </div>
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-6-1">Create app.js and run files with node.js</div>
+            <div class="window-sub-title" id="sub-title-1-5">Create app.js and run files with node.js</div>
             <div class="window-description">I this example I will show how to create the app.js file and run it with
                 node.js.
                 <br><br>First create the app.js file in your project directory and add the following code to the file.
@@ -283,8 +249,20 @@
                 <a href="/express.js">All of this will be explained in the next section - Express.js.</a>
             </div>
         </div>
+        <div class="content toc-subsection">
+            <div class="window-sub-title" id="sub-title-1-6">What is node_modules?</div>
+            <div class="window-description">The node_modules directory is a central repository where Node.js
+                dependencies (libraries, frameworks, plugins, and other code modules) are stored.
+                When you install a package using the Node Package Manager (npm) or Yarn, the package and its
+                dependencies are downloaded and placed into the node_modules directory of your project.
+                <br><br>A module will normally consist of a folder with one or more files in it. The folder will be
+                named the same as the module and will contain a package.json file which describes the module. .js
+                file/files, README.md file, and a LICENSE file. But it can vary from module to module.
+            </div>
+        </div>
 
     </div>
+    <div id="content-spacer"></div>
     <script src="/components/navbar/navbar.js"></script>
     <script src="/components/scrollspy/scrollspy.js"></script>
     <script src="../commentsColor.js"></script>
