Added som URL anatomy

--- a/Mandatory_I/public/pages/javascriptfundamentalspage/javascriptfundamentalspage.html
+++ b/Mandatory_I/public/pages/javascriptfundamentalspage/javascriptfundamentalspage.html
@@ -797,7 +797,8 @@
         <div class="content toc-subsection">
             <div class="window-sub-title" id="sub-title-8-1">Date</div>
             <div class="window-description">
-                In this example I will show how to use Date, how to show the current day, month and year. I will also show you have to show the time for different timezones.
+                In this example I will show how to use Date, how to show the current day, month and year. I will also
+                show you have to show the time for different timezones.
             </div>
             <pre class="code-snippet">
 
