--- a/Mandatory_I/public/pages/miscellaneouspage/miscellaneouspage.html
+++ b/Mandatory_I/public/pages/miscellaneouspage/miscellaneouspage.html
@@ -19,92 +19,41 @@
     </nav>
 
     <div class="window toc-section">
-        <div class="window-main-title" id="main-title-1">Working with Git in the terminal</div>
-        <div class="window-main-description">Git is a version control system that allows you to keep track of your
-            changes
-            and work with other developers on the same project. It is a very useful tool that you will need to learn
-            how to
-            use. In this section we will go through the basics of Git and how to use it in the terminal.
+        <div class="window-main-title" id="main-title-1">URL Terminology</div>
+        <div class="window-main-description">URL terminology is a set of terms that are used to describe the different
+            parts of a URL. This is useful when you are trying to understand how a URL works.
 
         </div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-1-1">Setup Git in your project</div>
-            <div class="window-description">First you have to install the .git file in your project directory. This can
-                be
-                done by running the following command in your project directory:
+            <div class="window-sub-title" id="sub-title-2-1">What an URL consist of</div>
+            <div class="window-description">An URL consist of the following parts:
+                <ul>
+                    <li>Protocol</li>
+                    <li>Domain</li>
+                    <li>Endpoint</li>
+                    <li>Subdomain</li>
+                    <li>Top-Level Domain - TLD</li>
+                    <li>Query String</li>
+                    <li>Path Variable</li>
+                </ul>
+                <br><br>
+                In this example I will dissect the following URL: https://www.example.com/api/users?name=John&age=20
             </div>
-            <pre class="terminal-snippet">
+            <pre class="code-snippet">
 
 
-    #To initialize git in your project directory run the following command
-    git init
+    https://www.example.com/api/users?name=John&age=20
+    //Protocol is the first part of the URL - https://
+    //Domain is the second part of the URL - www.example.com
+    //Endpoint is the third part of the URL - /api/users
+    //Subdomain is the fourth part of the URL - www
+    //Top-Level Domain - TLD is the fifth part of the URL - .com
+    //Query String is the sixth part of the URL - ?name=John&age=20
+    //In the query string name is the key and John is the value
 
-            </pre>
-        </div>
+    https://www.example.com/api/users/1
+    //Path Variable is the seventh part of the URL - In this example the user with the id 1 is the path variable
 
-
-
-        <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-1-2">Pushing to your repository</div>
-            <div class="window-description">Next step will be to add all your files to the staging area.
-                Commit your changes and push them to your repository.
-            </div>
-            <pre class="terminal-snippet">
-
-
-    #To add all your files to the staging area run the following command
-    git add -A 
-    #The -A flag will add all your files to the staging area. 
-    #You can also add files individually by typing in the file name instead of the -A flag.
-
-    #To commit your changes run the following command
-    git commit -m "Your commit message"
-
-    #Link your local repository to your remote repository by running the following command
-    git remote add origin your-repo-url.git
-
-    #To push your changes to your repository for the first time run the following command
-    git push -u origin main
-
-    #After that you can just run the following command to push your changes to your repository
-    git push
-
-    #You can also pull the latest changes from your repository by running the following command
-    git pull
-
-    #If you want to reset the staging area to the last commit run the following command
-    git reset
-                
-            </pre>
-        </div>
-        <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-1-3">Other useful Git commands</div>
-            <div class="window-description">These are some other useful Git commands that you might need.
-            </div>
-            <pre class="terminal-snippet">
-
-
-    #To clone a repository run the following command
-    git clone your-repo-url.git
-
-    #You can show all the branches for your repository by running the following command
-    git branch
-
-    #You can create a new branch by running the following command
-    git branch branch-name
-
-    #You can switch to a branch by running the following command
-    git checkout branch-name
-
-    #You can delete a branch by running the following command
-    git branch -d branch-name
-
-    #You can merge a branch into your main branch by running the following command
-    git merge branch-name
-
-    #Fetching will download the latest changes from your repository without merging them into your local files
-    git fetch
-   
             </pre>
         </div>
         <div id="content-spacer"></div>
