started on submit form

--- a/05._Pokemon/public/pages/contact/contact.html
+++ b/05._Pokemon/public/pages/contact/contact.html
@@ -1,1 +1,17 @@
 <h1>Contact</h1>
+
+
+<form action="/contact" method="post">
+  <label>Your Name</label>
+  <input placeholder="Enter your name..." type="text" required>
+
+  <label>Your Email</label>
+  <input placeholder="Enter your email..." type="email" required>
+
+  <label>Your Message</label>
+  <textarea style="resize: none;" cols="80" rows="20" placeholder="Enter your message..." type="text"
+    required></textarea>
+
+
+  <button>Submit</button>
+</form>
